--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <div style="width: 100%; overflow: hidden;">
     <div class="sliding-text">This course is getting harder UWU</div>
     <h1 style="font-family: 'Helvetica',  sans-serif; font-size: 2em; font-weight: bold; color: #2c3e50; text-transform: uppercase; text-align: center; letter-spacing: 2px; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); margin-bottom: 20px;">Hi everyone! My name is umut</h1>
-    <p style="font-family: 'Georgia', serif; font-size: 1.2em; line-height: 1.6; color: #34495e; font-style: italic; max-width: 800px; margin: 0 auto; padding: 15px; text-align: center; background-color: #f8f9fa; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">This is My First Website and my first project on replit</p>
-  <div style="text-align: center; margin: 20px 0;">
-      <img src="https://via.placeholder.com/300x200/3498db/ffffff?text=Sample+Image" alt="Örnek Görsel" style="max-width: 300px; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin: 10px;">
+    
+    <div style="text-align: center; margin: 20px 0;">
+      <img src="attached_assets/UMUTKABAKCI_AFIS_22040004045.jpg" alt="Umut'un Afişi" style="max-width: 300px; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin: 10px;">
     </div>
-  <script src="script.js"></script>
+    
+    <p style="font-family: 'Georgia', serif; font-size: 1.2em; line-height: 1.6; color: #34495e; font-style: italic; max-width: 800px; margin: 0 auto; padding: 15px; text-align: center; background-color: #f8f9fa; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">This is My First Website and my first project on replit</p>
+  
+  <script src="file:///C:/Users/Umut/Desktop/courses%202.%20d%C3%B6nem/UMUTKABAKCI_AFIS_22040004045.jpg"></script>
 </body>
 
 </html>
-
-
