--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
-
 <!DOCTYPE html>
-<html style="height: 100%; width: 100%;">
-
+<html lang="en">
 <head>
-  <meta charset="utf-15">
-  <meta name="viewport" content="width=device-width">
-  <title>This is My First Website and my first project on replit </title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cholesterol Management Guide</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div style="width: 100%; overflow: hidden;">
-    <div class="sliding-text">This course is getting harder UWU</div>
-    <h1 style="font-family: 'Helvetica',  sans-serif; font-size: 2em; font-weight: bold; color: #2c3e50; text-transform: uppercase; text-align: center; letter-spacing: 2px; text-shadow: 2px 2px 4px rgba(0,0,0,0.1); margin-bottom: 20px;">Hi everyone! My name is umut</h1>
-    
-    <div style="text-align: center; margin: 20px 0;">
-      <img src="./images/UMUTKABAKCI_AFIS_22040004045.jpg" alt="Umut'un Afişi">
+    <div class="container">
+        <h1>Cholesterol Management Guide</h1>
+        <div id="flowchart-area">
+            <p id="flowchart-text">Welcome! This guide helps you with initial steps after a high cholesterol diagnosis.</p>
+            <div id="flowchart-buttons">
+                <button id="start-button">Start</button>
+            </div>
+        </div>
+        <div id="recommendation-area" class="hidden">
+            <h2>Your Summary & Next Steps:</h2>
+            <ul id="recommendation-list"></ul>
+            <p id="final-message"></p>
+        </div>
     </div>
-    
-    <p style="font-family: 'Georgia', serif; font-size: 1.2em; line-height: 1.6; color: #34495e; font-style: italic; max-width: 800px; margin: 0 auto; padding: 15px; text-align: center; background-color: #f8f9fa; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">This is My First Website and my first project on replit</p>
-  
-  
+    <script src="script.js"></script>
 </body>
-
 </html>
