--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Dynamic Background Effects -->
+    <div class="floating-particles"></div>
+    <div class="bg-orb bg-orb-1"></div>
+    <div class="bg-orb bg-orb-2"></div>
+    <div class="bg-orb bg-orb-3"></div>
 
     <!-- Opening Animation Screen -->
     <div id="opening-animation" class="opening-animation active">
